# Meka-Bot

./: .gitignore  .gitignore.txt  CMakeLists.txt  README.md  build.cmd.txt
.cache/clangd/index/: AccountManager.cpp.52E204CB726CEA52.idx  AccountManager.h.FD428D328DB64C90.idx  Aggregator.cpp.DF9361A24ED31802.idx  Aggregator.h.368234ACB1CC98E4.idx  Backtester.cpp.6677FEECE16EE064.idx  Backtester.h.057AF0B39904199D.idx  CoinbaseAPI.h.5BACEF084EE96A7E.idx  ConcurrentQueue.cpp.27E3CDB3290F8155.idx  ConcurrentQueue.h.94D32A329EE113FB.idx  DataPipeline.h.FF0555C735C5F6DF.idx  Database.cpp.BF588C67ABE66508.idx  Database.h.F262E468187607BA.idx  IPC.cpp.FCE8A3F5734FE9FA.idx  IPC.h.E278DDD4EB30C125.idx  Meka.cpp.47DF152455EDF802.idx  Meka.h.A2F1C41712B87C81.idx  PaperAccount.cpp.B3403FBE7311FCD9.idx  PaperAccount.h.9B015FA4587048C6.idx  Parser.cpp.BE96406CACEA1B31.idx  Parser.h.C0B6EE8AC6A17260.idx  Strategy.cpp.355263539932BF2C.idx  Strategy.h.0D1D4C3D34D0E086.idx  WebSocketClient.cpp.718353DCB899BB0D.idx  WebSocketClient.h.48A010CC8F8B03A0.idx  logger.h.22DF402DA7E3C5D9.idx  main.cpp.01484694979F00BA.idx  moodycamel.h.9AECB61286293062.idx  profiler.h.5C887E127C23B5BE.idx  zip_file.hpp.9F8575D262AEE24B.idx
data/: Database.db  Database.db-shm  Database.db-wal
include/: Aggregator.h  Backtester.h  ConcurrentQueue.h  DataPipeline.h  Database.h  IPC.h  PaperAccount.h  Parser.h  Strategy.h  WebSocketClient.h  logger.h  profiler.h
include/Backtester/: Backtester.h  PaperAccount.h  Strategy.h
include/Bot/: AccountManager.h  CoinbaseAPI.h  Meka.h
include/Pipeline/: Aggregator.h  ConcurrentQueue.h  DataPipeline.h  Database.h  IPC.h  logger.h
include/tools/: zip_file.hpp
src/: Aggregator.cpp  Backtester.cpp  Charting.py  ConcurrentQueue.cpp  DataPipeline.cpp  Database.cpp  IPC.cpp  IPC.py  PaperAccount.cpp  Parser.cpp  Strategy.cpp  WebSocketClient.cpp  main.cpp
src/Backtester/: Backtester.cpp  PaperAccount.cpp  Strategy.cpp
src/Bot/: AccountManager.cpp  Meka.cpp
src/Pipeline/: Aggregator.cpp  ConcurrentQueue.cpp  ControlPanel.py  DataPipeline.cpp  Database.cpp  IPC.cpp  IPC.py  Parser.cpp  WebSocketClient.cpp
